# pystack

./: .gitignore  README.md  pyproject.toml  stack.py
