[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stack"
version = "0.1.0"
authors = [
  { name="ChenPi11", email="wushengwuxi-msctinoulk@outlook.com"},
]
description = "Python stack implementation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChenPi11/stack"
