[project]
name = "pystack"
version = "0.1.0"
authors = [
  { name="ChenPi11", email="wushengwuxi-msctinoulk@outlook.com"},
]
description = "A simple stack implementation in Python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChenPi11/pystack"
